# rust-mcp-server-template

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  kmcp.yaml
.cargo/: config.toml
helm/mcp-server/: Chart.yaml  values.yaml
helm/mcp-server/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
src/: main.rs
src/core/: mod.rs  server.rs  utils.rs
src/tools/: echo.rs  mod.rs
